<resources>
    <string name="app_name">Raven</string>
    <string name="escribe_aqui">Escribe aqui</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="usuario">USUARIO</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">iniciar Sesion</string>
    <string name="raven_chat">Raven Chat</string>
    <string name="cancelar">CANCELAR</string>
    <string name="nombre_completo">NOMBRE COMPLETO</string>
    <string name="nuevo_chat">NUEVO CHAT</string>
    <string name="configuracion_personal">Configuracion Personal</string>
    <string name="contrase_a_anterior">CONTRASEÑA ANTERIOR</string>
    <string name="nueva_contrase_a">NUEVA CONTRASEÑA</string>
    <string name="editar_nombre_completo">EDITAR NOMBRE</string>
    <string name="agregar_email">EMAIL</string>
    <string name="numero_telefono">NUMERO TELEFONO</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
</resources>
